Tweak docs CSS to prevent <pre> elements stretching the page width

--- a/doc/style.css
+++ b/doc/style.css
@@ -121,7 +121,7 @@ main code {
 pre code {
     margin: 0;
     padding: 0;
-    white-space: pre;
+    white-space: pre-wrap;
     background: transparent;
 }
 
